fix [#36363] ray_cast face index with n_gons